Update file to include coffee quote

--- a/_posts/0000-01-02-Jen-La.md
+++ b/_posts/0000-01-02-Jen-La.md
@@ -2,5 +2,9 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Hope it's not too slippery!
+As my friend once said:
+
+> To drink coffee is to
+> borrow energy from the future.
+
 Use the left arrow to go back!
